--- a/deepgram.toml
+++ b/deepgram.toml
@@ -3,10 +3,11 @@ title = "Django Live Text-to-Speech"
 description = "Get started using Deepgram's Live TTS with this Django demo app"
 author = "Deepgram DX Team <devrel@deepgram.com> (https://developers.deepgram.com)"
 repository = "https://github.com/deepgram-starters/django-live-text-to-speech"
-useCase = "Live TTS"
-language = "Python"
-framework = "Django"
+useCase = "live-text-to-speech"
+language = "python"
+framework = "django"
 sdk = "N/A"
+tags = ["live-text-to-speech", "live-tts", "streaming-tts", "real-time-tts", "streaming-text-to-speech", "python", "django"]
 
 [install.pre]
 command = ["git submodule update --init --recursive", "python3 -m venv venv"]
